# cookiecutter-aws-sam-pipeline

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt  test_requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python.yml
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_name}}/: Pipeline-Instructions.md  buildspec.yaml  pipeline.yaml
