[tool.poetry]
name = "cookiecutter-aws-sam-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-mock = "^3.1.0"
boto3 = "^1.13.19"
aws-sam-translator = "^1.24.0"
cookiecutter = "^1.7.2"
cfn-lint = "^0.32.1"
pytest-cookies = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
