[tool.poetry]
name = "cookiecutter-aws-sam-pipeline"
version = "0.1.0"
description = "A cookiecutter template to create a generic 3-environment Pipeline for your Serverless App based on Serverless Application Model (SAM)."
authors = ["Amazon Web Services"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-mock = "^3.1.0"
boto3 = "^1.13.19"
aws-sam-translator = "^1.24.0"
cfn-lint = "^0.32.1"
cookiecutter = "^2.1.1"
pytest-cookies = "^0.6.1"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"